# ps5-ezremote-client

./: .gitmodules  CMakeLists.txt  README.md
data/: homebrew.js
data/assets/: download_status.html  index.html
data/assets/langs/: Arabic.ini  Catalan.ini  Croatian.ini  Dutch.ini  English.ini  Euskera.ini  French.ini  Galego.ini  German.ini  Greek.ini  Hungarian.ini  Indonesian.ini  Italiano.ini  Japanese.ini  Korean.ini  Norwegian.ini  Polish.ini  Portuguese_BR.ini  Romanian.ini  Russian.ini  Ryukyuan.ini  Simplified Chinese.ini  Spanish.ini  Thai.ini  Traditional Chinese.ini  Turkish.ini  Ukrainian.ini  Vietnamese.ini
data/assets/res/: angular-filemanager.min.js
data/sce_sys/: param.json
ezremote-dpi/: CMakeLists.txt
ezremote-dpi/source/: main.cpp
ezremote-dpi/source/server/: http_server.cpp  http_server.h
source/: actions.cpp  actions.h  common.h  config.cpp  config.h  crypt.c  crypt.h  dbglogger.c  fs.cpp  gui.cpp  gui.h  ime_dialog.cpp  ime_dialog.h  inifile.c  installer.cpp  installer.h  lang.cpp  lang.h  main.cpp  mem_file.cpp  mem_file.h  sceAppInstUrl.h  sceBgft.h  sceImeDialog.h  sceKernel.h  sceSystemService.h  sceUserService.h  split_file.cpp  split_file.h  stream_file.h  textures.cpp  textures.h  util.h  windows.cpp  windows.h  zip_util.cpp  zip_util.h
source/clients/: apache.cpp  archiveorg.cpp  archiveorg.h  baseclient.cpp  baseclient.h  ftpclient.cpp  ftpclient.h  github.cpp  github.h  iis.cpp  myrient.cpp  nfsclient.cpp  nfsclient.h  nginx.cpp  npxserve.cpp  rclone.cpp  remote_client.h  sftpclient.cpp  sftpclient.h  smbclient.cpp  smbclient.h  webdav.cpp  webdav.h
source/filehost/: 1fichier.cpp  alldebrid.cpp  gdrive.cpp  mediafire.cpp  realdebrid.cpp
source/http/: httplib.cpp
source/imgui/: imgui_impl_sdlrenderer.cpp
source/server/: http_server.cpp  http_server.h  range_parser.h
